# binary_trees

./: 0-binary_tree_node.c  1-binary_tree_insert_left.c  10-binary_tree_depth.c  101-binary_tree_levelorder.c  101-lvl  102-binary_tree_is_complete.c  103-binary_tree_rotate_left.c  104-binary_tree_rotate_right.c  11-binary_tree_size.c  110-binary_tree_is_bst.c  114-bst_remove.c  12-binary_tree_leaves.c  120-binary_tree_is_avl.c  120-is_avl  121-avl_insert  13-binary_tree_nodes.c  130-binary_tree_is_heap.c  14-balance  14-binary_tree_balance.c  15-binary_tree_is_full.c  16-binary_tree_is_perfect.c  16-perfect  17-binary_tree_sibling.c  18-binary_tree_uncle.c  2-binary_tree_insert_right.c  3-binary_tree_delete.c  4-binary_tree_is_leaf.c  5-binary_tree_is_root.c  6-binary_tree_preorder.c  7-binary_tree_inorder.c  8-binary_tree_postorder.c  9-binary_tree_height.c  CMakeLists.txt  README.md  binary_trees.h
